# pleyva2004.github.io

./: 404.html  CLAUDE.md  CNAME  RESEARCH_PAGE_README.md  index.html  index.txt  package-lock.json  package.json
.next/: app-build-manifest.json  prerender-manifest.json  trace
.next/cache/: .rscinfo
.next/server/: server-reference-manifest.js  server-reference-manifest.json
.next/server/app/: page_client-reference-manifest.js
.next/server/chunks/: [root-of-the-server]__f547b805._.js.map  node_modules_next_635ab235._.js.map
.next/static/chunks/: [root-of-the-server]__0f0ba101._.css  [root-of-the-server]__0f0ba101._.css.map  node_modules_56ff72db._.js  node_modules_ea2287e1._.js  (+19 more)
assets/: index-CFUlDxrP.js  index-CIYMSEii.css  index-DSd80QNP.js
backend/: graph.py  main.py  pyproject.toml  retriever.py  test.py  utils.py
docs/: UX_UI_IMPROVEMENT_PLAN.md  realtime-migration.md  webllm-migration.md
frontend/: package-lock.json  package.json
frontend-nextjs/: package-lock.json  package.json
frontend/src/: App.tsx
src/app/: globals.css  layout.tsx  page.tsx
src/components/: Background.tsx  ChatInput.tsx  ChatInterface.tsx  Contact.tsx  Header.tsx  Hero.tsx  Magnetic.tsx  MarkdownNotesPanel.tsx  ModelLoadingProgress.tsx  ModelSelector.tsx  PDFViewer.tsx  PDFViewerWrapper.tsx  ReadingListSidebar.tsx  ResearchCard.tsx  ResearchDetail.tsx  Sidebar.tsx  TiltCard.tsx  Timeline.tsx  TimelineCard.tsx  VoiceChatInterface.tsx
src/contexts/: ChatContext.tsx
src/data/: timeline.ts
src/hooks/: useWebLLM.ts
src/lib/: cal-api.ts  cal-availability.ts  types.ts
(+89 files in other folders)
